Update hero title to include Professional / Amateur for both EN and DE

--- a/locales/de.json
+++ b/locales/de.json
@@ -13,7 +13,7 @@
   },
   "home": {
     "hero": {
-      "title": "Finden Sie professionelle Schlittschuh-Schleifer",
+      "title": "Finden Sie professionelle / Amateur Schlittschuh-Schleifer",
       "subtitle": "in Ihrer Nähe",
       "description": "Verbinden Sie sich mit vertrauenswürdigen Schlittschuh-Schleifern. Durchsuchen Sie Profile, sehen Sie Verfügbarkeiten und buchen Sie Termine mit Leichtigkeit.",
       "searchButton": "Schleifer suchen",
