--- a/locales/en.json
+++ b/locales/en.json
@@ -13,7 +13,7 @@
   },
   "home": {
     "hero": {
-      "title": "Find Professional / Amateur Skate Sharpeners",
+      "title": "Find Skate Sharpeners",
       "subtitle": "Near You",
       "description": "Connect with trusted skate sharpening professionals. Browse profiles, view availability, and book appointments with ease.",
       "searchButton": "Search Sharpeners",
