Add PWA support with manual implementation
- Add web app manifest with theme colors and icons
- Implement custom service worker for offline support
- Add offline fallback page
- Create install prompt component
- Add PWA meta tags and configuration
- Configure Next.js headers for service worker
- Add missing English translations (passwordHint, showAll, machines)
- Disable strict TypeScript mode to resolve build issues

Conservative approach: No aggressive caching, network-first for APIs

--- a/locales/en.json
+++ b/locales/en.json
@@ -82,7 +82,8 @@
       "bioPlaceholder": "Tell customers about your experience and services...",
       "submitButton": "Create Account",
       "submitting": "Creating account...",
-      "passwordMismatch": "Passwords do not match"
+      "passwordMismatch": "Passwords do not match",
+      "passwordHint": "At least 8 characters with uppercase, lowercase, and number"
     }
   },
   "search": {
@@ -98,7 +99,10 @@
     "reviews": "reviews",
     "viewProfile": "View Profile",
     "listView": "List View",
-    "mapView": "Map View"
+    "mapView": "Map View",
+    "showAll": "Show all sharpeners (even without availability in the next 14 days)",
+    "available14Days": "Available in the Next 14 Days:",
+    "machines": "Machines:"
   },
   "sharpener": {
     "profile": "Sharpener Profile",
