Add missing English translations for search page
- Added 'showAll' translation for checkbox label
- Added 'available14Days' translation for availability header
- Added 'machines' translation for machines label
- Fixes display of translation keys in English version

--- a/locales/en.json
+++ b/locales/en.json
@@ -98,7 +98,10 @@
     "reviews": "reviews",
     "viewProfile": "View Profile",
     "listView": "List View",
-    "mapView": "Map View"
+    "mapView": "Map View",
+    "showAll": "Show all sharpeners (even without availability in the next 14 days)",
+    "available14Days": "Available in the next 14 days:",
+    "machines": "Machines:"
   },
   "sharpener": {
     "profile": "Sharpener Profile",
