Add German translations for appointments page
- Add missing German translations for appointment headings (Active/Past)
- Translate all appointment status messages (pending, confirmed, denied)
- Translate button labels (Complete & Rate, Leave a Rating, Submit Rating, Cancel)
- Translate star rating text (singular/plural forms)
- Update appointments page to use translation keys instead of hardcoded English text
- Fix missing closing parenthesis in star rating map function

All appointment page text now properly displays in German when language is switched.

--- a/locales/de.json
+++ b/locales/de.json
@@ -136,14 +136,31 @@
     "actions": "Aktionen",
     "rateButton": "Service bewerten",
     "cancelButton": "Stornieren",
+    "activeTitle": "Aktive Termine",
+    "pastTitle": "Vergangene Termine",
+    "noPastAppointments": "Keine vergangenen Termine",
+    "dateTime": "Datum & Uhrzeit",
+    "pendingMessage": "⏳ Warten auf Annahme durch den Schleifer",
+    "confirmedMessage": "✓ Ihr Termin wurde bestätigt! Der Schleifer wird Sie kontaktieren.",
+    "deniedMessage": "Dieser Termin wurde vom Schleifer abgelehnt",
+    "completeAndRateButton": "Abschließen & Bewerten",
+    "leaveRatingButton": "Bewertung abgeben",
+    "leaveRatingTitle": "Bewertung abgeben",
+    "selectRating": "Bewertung auswählen",
+    "shareExperience": "Teilen Sie Ihre Erfahrung (optional)",
+    "submitRatingButton": "Bewertung absenden",
+    "cancelRatingButton": "Abbrechen",
+    "starsSingular": "Stern",
+    "starsPlural": "Sterne",
     "statuses": {
-      "PENDING": "PENDING",
-      "CONFIRMED": "CONFIRMED",
-      "DENIED": "DENIED",
-      "CANCELLED": "CANCELLED",
-      "COMPLETED": "COMPLETED",
-      "RATED": "RATED",
-      "EXPIRED": "EXPIRED"
+      "PENDING": "Ausstehend",
+      "CONFIRMED": "Bestätigt",
+      "DENIED": "Abgelehnt",
+      "CANCELLED": "Storniert",
+      "COMPLETED": "Abgeschlossen",
+      "RATED": "Bewertet",
+      "EXPIRED": "Abgelaufen",
+      "NO_SHOW": "Nicht erschienen"
     }
   },
   "dashboard": {
