--- a/locales/en.json
+++ b/locales/en.json
@@ -135,14 +135,31 @@
     "actions": "Actions",
     "rateButton": "Rate Service",
     "cancelButton": "Cancel",
+    "activeTitle": "Active Appointments",
+    "pastTitle": "Past Appointments",
+    "noPastAppointments": "No past appointments",
+    "dateTime": "Date & Time",
+    "pendingMessage": "⏳ Waiting for sharpener to accept your request",
+    "confirmedMessage": "✓ Your appointment has been confirmed! The sharpener will contact you.",
+    "deniedMessage": "This appointment was declined by the sharpener",
+    "completeAndRateButton": "Complete & Rate",
+    "leaveRatingButton": "Leave a Rating",
+    "leaveRatingTitle": "Leave a Rating",
+    "selectRating": "Select rating",
+    "shareExperience": "Share your experience (optional)",
+    "submitRatingButton": "Submit Rating",
+    "cancelRatingButton": "Cancel",
+    "starsSingular": "star",
+    "starsPlural": "stars",
     "statuses": {
-      "PENDING": "PENDING",
-      "CONFIRMED": "CONFIRMED",
-      "DENIED": "DENIED",
-      "CANCELLED": "CANCELLED",
-      "COMPLETED": "COMPLETED",
-      "RATED": "RATED",
-      "EXPIRED": "EXPIRED"
+      "PENDING": "Pending",
+      "CONFIRMED": "Confirmed",
+      "DENIED": "Denied",
+      "CANCELLED": "Cancelled",
+      "COMPLETED": "Completed",
+      "RATED": "Rated",
+      "EXPIRED": "Expired",
+      "NO_SHOW": "No Show"
     }
   },
   "dashboard": {
