fix: Resolve Next.js 14.2.35 build errors
- Add missing passwordHint translation (en.json)
- Wrap useSearchParams in Suspense boundaries for verify-email and dashboard pages
- Mark dynamic API routes with 'force-dynamic' export to prevent static generation errors

--- a/locales/en.json
+++ b/locales/en.json
@@ -82,7 +82,8 @@
       "bioPlaceholder": "Tell customers about your experience and services...",
       "submitButton": "Create Account",
       "submitting": "Creating account...",
-      "passwordMismatch": "Passwords do not match"
+      "passwordMismatch": "Passwords do not match",
+      "passwordHint": "At least 8 characters with uppercase, lowercase, and a number"
     }
   },
   "search": {
