--- a/locales/en.json
+++ b/locales/en.json
@@ -235,7 +235,9 @@
       "endTime": "End Time",
       "price": "Price",
       "addButton": "Add Availability",
-      "deleteButton": "Delete"
+      "deleteButton": "Delete",
+      "repeatWeeks": "Weekly repetition (number of weeks)",
+      "repeatHelper": "Creates the same time slot for the next X weeks (e.g., every Monday from 9:00-17:00)"
     },
     "appointments": {
       "title": "Appointment Requests",
