fix: Add German translations for confirmed and past appointments in dashboard

--- a/locales/de.json
+++ b/locales/de.json
@@ -250,7 +250,11 @@
       "status": "Status",
       "notes": "Notizen",
       "acceptButton": "Annehmen",
-      "denyButton": "Ablehnen"
+      "denyButton": "Ablehnen",
+      "confirmedTitle": "Bestätigte Termine",
+      "noConfirmed": "Keine bestätigten Termine",
+      "pastTitle": "Vergangene Termine",
+      "noPast": "Keine vergangenen Termine"
     }
   },
   "booking": {
